<resources>
    <string name="app_name">TumaSetupApp</string>
    <string name="createRes">Create Restaurant</string>
    <string name="editRes">Edit Restaurant</string>
    <string name="DefaultImage">TODO</string>

    <string name="action_settings">Settings</string>
    <string name="passowrd">Enter Password</string>
    <string name="login">LOGIN</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="userName">User Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="username">Username</string>
    <string name="insert_res_name">Insert the restaurant name below</string>
    <string name="add_restaurant">Create</string>
    <string name="resto_name_field">type here</string>
    <string name="add_restaurant_k">Add Restaurant</string>
    <string name="add_type">Add type</string>
    <string name="insert_need">Select below</string>
    <string name="add_dish">ADD DISH</string>
    <string name="type_name_field">type here</string>
    <string name="insert_type_name">Insert the type name below</string>
    <string name="insert_dish_name">Insert the dish name and price below</string>
    <string name="dish_name_field">type dish name here</string>
    <string name="dish_price_field">enter price here</string>
    <string name="resto_description_field">Type description here</string>
</resources>
