 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="#EC5"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="68dp"
            android:text="@string/insert_res_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/resto_name_field"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_marginBottom="17dp"
            android:background="@drawable/loginbutton_selector"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/resto_name_field"
            android:textStyle="bold" />
     <EditText
         android:id="@+id/resto_description_field"
         android:layout_width="match_parent"
         android:layout_height="80sp"
         android:layout_marginBottom="17dp"
         android:background="@drawable/loginbutton_selector"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/resto_description_field"
         android:textStyle="bold" />
        <Button
            android:id="@+id/addRestoBtn"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/roundedbutton"
            android:padding="3dp"
            android:text="@string/add_restaurant"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold" />

 </LinearLayout>

