 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="#EC5"
        android:padding="20dp"
        >

        <TextView
            android:id="@+id/tesy"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="40dp"
            android:text="@string/insert_dish_name"
            android:textSize="20sp"
            android:textStyle="bold" />

     <EditText
         android:id="@+id/dish_name_field"
         android:layout_width="match_parent"
         android:layout_height="45sp"
         android:layout_marginBottom="17dp"
         android:background="@drawable/loginbutton_selector"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/dish_name_field"
         android:textStyle="bold"
         android:visibility="visible" />

     <EditText
         android:id="@+id/dish_price_field"
         android:layout_width="match_parent"
         android:layout_height="45sp"
         android:layout_marginBottom="17dp"
         android:background="@drawable/loginbutton_selector"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="@string/dish_price_field"
         android:textStyle="bold"
         android:visibility="visible" />


     <Button
         android:id="@+id/add_dish_button"
         android:layout_width="250sp"
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
         android:background="@drawable/roundedbutton"
         android:padding="3dp"
         android:text="@string/add_dish"
         android:textColor="#FFFFFF"
         android:textSize="17sp"
         android:textStyle="bold" />

 </LinearLayout>

